Hotfix multi lang

--- a/mobile/src/constants/languages/en.json
+++ b/mobile/src/constants/languages/en.json
@@ -3,5 +3,6 @@
   "loading": "Loading",
   "pointsList": "Points list",
   "pointsMap": "Points map",
-  "language": "Language"
+  "language": "Language",
+  "loadTheMap": "Load the map"
 }
