--- a/mobile/src/constants/languages/pl.json
+++ b/mobile/src/constants/languages/pl.json
@@ -3,5 +3,6 @@
   "loading": "Wczytywanie",
   "pointsList": "Lista punktów",
   "pointsMap": "Mapa punktów",
-  "language": "Język"
+  "language": "Język",
+  "loadTheMap": "Wczytaj mapę"
 }
