--- a/mobile/android/app/src/main/res/values/strings.xml
+++ b/mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GdzieJestSZOP</string>
+    <string name="default_notification_channel_id" translatable="false">default</string>
 </resources>
