--- a/mobile/src/constants/languages/en.json
+++ b/mobile/src/constants/languages/en.json
@@ -6,7 +6,13 @@
   "language": "Language",
   "loadTheMap": "Load the map",
   "pointsTitle": "All points",
-  "tileHeader": "ABOUT\nTHE\nPROJECT",
-  "tileText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua."
+  "tileHeader": ["ABOUT THE PROJECT",
+                 "THE ECOLOGY OF RECYCLING",
+                 "BETTER LIFE IN WROCŁAW",
+                 "SPREAD THE AWARNESS"],
+  "tileText": ["GdzieJestSZOP's mission is to make it easier for people to use Ekosystem's waste collection services. Get rid of problematic waste free of charge!",
+              "Planned and well executed waste management process benefits both local community and public space, as well as global ecosystem.",
+              "Using GdzieJestSZOP, you can easily find a local waste collection point that suits your needs. Set a reminder to not miss it! \nTogheter we can make Wrocław cleaner.",
+              "Effective communication between waste management organisations and citizens is essential to make it work. Spread the awarness for better future of our city and planet."]
 
 }
