--- a/mobile/src/constants/languages/en.json
+++ b/mobile/src/constants/languages/en.json
@@ -14,8 +14,10 @@
               "Planned and well executed waste management process benefits both local community and public space, as well as global ecosystem.",
               "Using GdzieJestSZOP, you can easily find a local waste collection point that suits your needs. Set a reminder to not miss it! \nTogheter we can make Wrocław cleaner.",
               "Effective communication between waste management organisations and citizens is essential to make it work. Spread the awarness for better future of our city and planet."],
-  "aboutHeader": ["ABOUT US"],
-  "aboutText": ["This app was developed by a group of four computer engineering students from Wrocław University of Science and Technology.",
-              " Michał Przytarski, \n Miłosz Tarka, \n Maciej Lendzion, \n Stanisław Karpisiak"]
-
+  "aboutHeader": ["ABOUT THE APP"],
+  "aboutText": ["This open-source app was developed by a group of four computer engineering students from Wrocław University of Science and Technology.",
+              "OUR TEAM",
+              " Michał Przytarski \n Miłosz Tarka \n Maciej Lendzion \n Stanisław Karpisiak"],
+  "listSelected": "Selected",
+  "gitIcon": "Click here to check it out on GitHub!"
 }
