--- a/mobile/src/constants/languages/pl.json
+++ b/mobile/src/constants/languages/pl.json
@@ -5,7 +5,7 @@
   "pointsMap": "Mapa punktów",
   "language": "Język",
   "loadTheMap": "Wczytaj mapę",
-  "pointsTitle": "Wszystkie punkty",
+  "pointsTitle": "Twoje punkty",
   "tileHeader": "O\nPROJEKCIE",
   "tileText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua."
 }
